# CartoonSegmentation

./: pyproject.toml  requirements.txt  setup.py
cartoon_segmentation/animeinsseg/: __init__.py  anime_instances.py
cartoon_segmentation/animeinsseg/data/: dataset.py
cartoon_segmentation/animeinsseg/models/animeseg_refine/: __init__.py
