[project]
name = "CartoonSegmentation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "CartoonSegmentation", email = "n/a"},
]
dependencies = [
    "pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git",
    "einops",
    "imageio",
    "imgaug",
    "panopticapi @ git+https://github.com/cocodataset/panopticapi.git",
    "onnxruntime-gpu",
    "pytorch-lightning",
#    "albumentations==1.1.0",
    "huggingface-hub",
    "omegaconf",
    "diffusers",
    "accelerate",
    "matplotlib",
    "scipy",
    "transformers",
    "basicsr",
    "numba",
    "moviepy",
    "flask",
    "h5py",
    "gradio",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
